--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body class="site-body">
     <!-- Хедер -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__wrap">
         <nav class="navigation">
           <a
@@ -76,19 +76,19 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- Герой -->
-      <section class="hero hero__style">
+      <!-- <section class="hero hero__style">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__btn btn" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- Переваги -->
-      <section class="advantages section">
+      <!-- <section class="advantages section">
         <div class="container">
           <h2 hidden>Переваги</h2>
           <ul class="advantages__list list">
@@ -141,9 +141,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Чим ми займаємося -->
-      <section class="projects section">
+      <!-- <section class="projects section">
         <div class="container">
           <h2 class="projects__title section-title">Чим ми займаємося</h2>
           <ul class="pic-list list">
@@ -179,7 +179,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Наша команда -->
       <section class="command section">
         <div class="container">
@@ -509,7 +509,7 @@
         </div>
       </section>
       <!-- Постійні кліенти -->
-      <section class="regular-customers section">
+      <!-- <section class="regular-customers section">
         <div class="container">
           <h2 class="regular-customers__title section-title">
             Постійні клієнти
@@ -571,14 +571,14 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- Підвал сайту -->
-    <footer class="basement">
+    <!-- <footer class="basement">
       <div class="container">
         <div class="basement__wrap">
           <!-- Логотип та контакти -->
-          <div class="address">
+    <!-- <div class="address">
             <a href="./index.html" class="address__logo link section-logo">
               <span class="address__style section-logo">Web</span>Studio</a
             >
@@ -609,9 +609,9 @@
                 </li>
               </ul>
             </address>
-          </div>
-          <!-- Соціальні мережі -->
-          <div class="social-networks basement__social-networks">
+          </div> -->
+    <!-- Соціальні мережі -->
+    <!-- <div class="social-networks basement__social-networks">
             <p class="social-networks__title">приєднуйтесь</p>
             <ul class="social-icons list">
               <li class="social-icons__item">
@@ -671,9 +671,9 @@
                 ></a>
               </li>
             </ul>
-          </div>
-          <!-- Підпишіться на розсилку -->
-          <div class="mailing basement__mailing">
+          </div> -->
+    <!-- Підпишіться на розсилку -->
+    <!-- <div class="mailing basement__mailing">
             <p class="mailing__title">Підпишіться на розсилку</p>
             <form class="basement-form">
               <input
@@ -695,21 +695,22 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
+    -->
     <!-- Модальне вікно -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
           <svg class="modal__close-icon" width="18" height="18">
             <use href="./images/sprite.svg#icon-close-modal"></use>
           </svg>
-        </button>
-        <!-- Заголовок модалки -->
-        <p class="modal__title">Залиште свої дані, ми вам передзвонимо</p>
-        <!-- Форма клієнта -->
-        <form class="modal__form">
-          <!-- Імʼя -->
-          <div class="modal__field">
+        </button> -->
+    <!-- Заголовок модалки -->
+    <!-- <p class="modal__title">Залиште свої дані, ми вам передзвонимо</p> -->
+    <!-- Форма клієнта -->
+    <!-- <form class="modal__form"> -->
+    <!-- Імʼя -->
+    <!-- <div class="modal__field">
             <label for="user-name" class="modal__input-label">Ім'я</label>
             <div class="modal__input-wrap">
               <input
@@ -722,9 +723,9 @@
                 <use href="./images/sprite.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
-          </div>
-          <!-- Телефон -->
-          <div class="modal__field">
+          </div> -->
+    <!-- Телефон -->
+    <!-- <div class="modal__field">
             <label for="user-tel" class="modal__input-label">Телефон</label>
             <div class="modal__input-wrap">
               <input
@@ -737,9 +738,9 @@
                 <use href="./images/sprite.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
-          </div>
-          <!-- Пошта -->
-          <div class="modal__field">
+          </div> -->
+    <!-- Пошта -->
+    <!-- <div class="modal__field">
             <label for="user-mail" class="modal__input-label">Пошта</label>
             <div class="modal__input-wrap">
               <input
@@ -752,9 +753,9 @@
                 <use href="./images/sprite.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
-          </div>
-          <!-- Коментар -->
-          <div class="modal__field-textarea">
+          </div> -->
+    <!-- Коментар -->
+    <!-- <div class="modal__field-textarea">
             <label for="user-comment" class="modal__input-label"
               >Коментар</label
             >
@@ -764,9 +765,9 @@
               class="modal__textarea-comment"
               placeholder="Введіть текст"
             ></textarea>
-          </div>
-          <!-- Розсилка та умови договору -->
-          <div class="modal__field-privacy">
+          </div> -->
+    <!-- Розсилка та умови договору -->
+    <!-- <div class="modal__field-privacy">
             <input
               type="checkbox"
               name="privacy"
@@ -784,12 +785,12 @@
                 <a class="modal__privacy-terms" href="#">Умови договору</a>
               </span></label
             >
-          </div>
-          <!-- Кнопка відправити -->
-          <button type="submit" class="modal__btn btn">Відправити</button>
+          </div> -->
+    <!-- Кнопка відправити -->
+    <!-- <button type="submit" class="modal__btn btn">Відправити</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <!-- JS -->
     <script src="./js/modal.js"></script>
   </body>
