--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
     </header> -->
     <main>
       <!-- Герой -->
-      <!-- <section class="hero hero__style">
+      <section class="hero hero__style">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__btn btn" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- Переваги -->
       <!-- <section class="advantages section">
         <div class="container">
@@ -181,7 +181,7 @@
         </div>
       </section> -->
       <!-- Наша команда -->
-      <section class="command section">
+      <!-- <section class="command section">
         <div class="container">
           <h2 class="command__title section-title">Наша команда</h2>
           <ul class="employees-list list">
@@ -507,7 +507,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Постійні кліенти -->
       <!-- <section class="regular-customers section">
         <div class="container">
