correct adaptive hero

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <main>
       <!-- Герой -->
       <section class="hero hero__style">
-        <div class="container">
+        <div class="container hero__container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__btn btn" data-modal-open>
             Замовити послугу
@@ -88,7 +88,7 @@
         </div>
       </section>
       <!-- Переваги -->
-      <!-- <section class="advantages section">
+      <section class="advantages section">
         <div class="container">
           <h2 hidden>Переваги</h2>
           <ul class="advantages__list list">
@@ -141,7 +141,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Чим ми займаємося -->
       <!-- <section class="projects section">
         <div class="container">
@@ -181,7 +181,7 @@
         </div>
       </section> -->
       <!-- Наша команда -->
-      <!-- <section class="command section">
+      <section class="command section">
         <div class="container">
           <h2 class="command__title section-title">Наша команда</h2>
           <ul class="employees-list list">
@@ -507,9 +507,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Постійні кліенти -->
-      <!-- <section class="regular-customers section">
+      <section class="regular-customers section">
         <div class="container">
           <h2 class="regular-customers__title section-title">
             Постійні клієнти
@@ -571,7 +571,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- Підвал сайту -->
     <!-- <footer class="basement">
