--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
     </header> -->
     <main>
       <!-- Герой -->
-      <section class="hero hero__style">
+      <!-- <section class="hero hero__style">
         <div class="container hero__container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__btn btn" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- Переваги -->
-      <section class="advantages section">
+      <!-- <section class="advantages section">
         <div class="container">
           <h2 hidden>Переваги</h2>
           <ul class="advantages__list list">
@@ -141,7 +141,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Чим ми займаємося -->
       <!-- <section class="projects section">
         <div class="container">
@@ -181,7 +181,7 @@
         </div>
       </section> -->
       <!-- Наша команда -->
-      <section class="command section">
+      <!-- <section class="command section">
         <div class="container">
           <h2 class="command__title section-title">Наша команда</h2>
           <ul class="employees-list list">
@@ -507,9 +507,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Постійні кліенти -->
-      <section class="regular-customers section">
+      <!-- <section class="regular-customers section">
         <div class="container">
           <h2 class="regular-customers__title section-title">
             Постійні клієнти
@@ -571,14 +571,14 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- Підвал сайту -->
-    <!-- <footer class="basement">
+    <footer class="basement">
       <div class="container">
         <div class="basement__wrap">
           <!-- Логотип та контакти -->
-    <!-- <div class="address">
+          <div class="address">
             <a href="./index.html" class="address__logo link section-logo">
               <span class="address__style section-logo">Web</span>Studio</a
             >
@@ -609,9 +609,9 @@
                 </li>
               </ul>
             </address>
-          </div> -->
-    <!-- Соціальні мережі -->
-    <!-- <div class="social-networks basement__social-networks">
+          </div>
+          <!-- Соціальні мережі -->
+          <div class="social-networks basement__social-networks">
             <p class="social-networks__title">приєднуйтесь</p>
             <ul class="social-icons list">
               <li class="social-icons__item">
@@ -671,9 +671,9 @@
                 ></a>
               </li>
             </ul>
-          </div> -->
-    <!-- Підпишіться на розсилку -->
-    <!-- <div class="mailing basement__mailing">
+          </div>
+          <!-- Підпишіться на розсилку -->
+          <div class="mailing basement__mailing">
             <p class="mailing__title">Підпишіться на розсилку</p>
             <form class="basement-form">
               <input
@@ -695,7 +695,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     -->
     <!-- Модальне вікно -->
     <!-- <div class="backdrop is-hidden" data-modal>
