--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body class="site-body">
     <!-- Хедер -->
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header__wrap">
         <nav class="navigation">
           <a
@@ -75,8 +75,109 @@
             >
           </li>
         </ul>
+        <button type="button" class="mobile-menu-btn" data-menu-open>
+          <svg class="mobile-menu-btn__icon" width="40" height="40">
+            <use href="./images/sprite.svg#icon-mobile-menu"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+      <div class="mobile-menu is-hidden" data-menu>
+        <div class="mobile-menu__container">
+          <div class="mobile-menu-top">
+            <ul class="mobile-menu-nav list">
+              <li class="mobile-menu-nav__item">
+                <a
+                  href="./index.html"
+                  class="mobile-menu-nav__link mobile-menu-nav__link--active link section-link"
+                  >Студія</a
+                >
+              </li>
+              <li class="mobile-menu-nav__item">
+                <a
+                  href="./portfolio.html"
+                  class="mobile-menu-nav__link link section-link"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="mobile-menu-nav__item">
+                <a href="#" class="mobile-menu-nav__link link section-link"
+                  >Контакти</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="mobile-menu-bottom">
+            <ul class="mobile-contact list">
+              <li class="mobile-contact__item">
+                <a
+                  href="tel:+380961111111"
+                  class="mobile-contact__tel link section-link"
+                >
+                  <svg class="mobile-contact__icon" width="10" height="16">
+                    <use href="./images/sprite.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+              <li class="mobile-contact__item">
+                <a
+                  href="malito:info@devstudio.com"
+                  class="mobile-contact__mail link section-link"
+                >
+                  <svg class="mobile-contact__icon" width="16" height="12">
+                    <use href="./images/sprite.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mobile-social list">
+              <li class="mobile-social__item">
+                <a
+                  href=""
+                  class="mobile-social__link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Instagram
+                </a>
+              </li>
+              <li class="mobile-social__item">
+                <a
+                  href=""
+                  class="mobile-social__link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Twitter
+                </a>
+              </li>
+              <li class="mobile-social__item">
+                <a
+                  href=""
+                  class="mobile-social__link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Facebook
+                </a>
+              </li>
+              <li class="mobile-social__item">
+                <a
+                  href=""
+                  class="mobile-social__link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >LinkedIn
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <button type="button" class="mobile-close" data-menu-close>
+          <svg class="mobile-close__icon" width="40" height="40">
+            <use href="./images/sprite.svg#icon-mobile-menu-close"></use>
+          </svg>
+        </button>
+      </div>
+    </header>
     <main>
       <!-- Герой -->
       <!-- <section class="hero hero__style">
@@ -193,7 +294,7 @@
         </div>
       </section> -->
       <!-- Наша команда -->
-      <section class="command section">
+      <!-- <section class="command section">
         <div class="container">
           <h2 class="command__title section-title">Наша команда</h2>
           <ul class="employees-list list">
@@ -611,7 +712,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Постійні кліенти -->
       <!-- <section class="regular-customers section">
         <div class="container">
@@ -897,5 +998,6 @@
     </div> -->
     <!-- JS -->
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
