--- a/index.html
+++ b/index.html
@@ -54,27 +54,32 @@
             </li>
           </ul>
         </nav>
-        <ul class="contact header__contact list">
-          <li class="contact__item">
-            <a
-              href="malito:info@devstudio.com"
-              class="contact__link link section-link"
-            >
-              <svg class="contact__icon" width="16" height="12">
-                <use href="./images/sprite.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="contact__item">
-            <a href="tel:+380961111111" class="contact__link link section-link">
-              <svg class="contact__icon" width="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <div class="header-contacts-wrap">
+          <ul class="contact header__contact list">
+            <li class="contact__item">
+              <a
+                href="malito:info@devstudio.com"
+                class="contact__link link section-link"
+              >
+                <svg class="contact__icon" width="16" height="12">
+                  <use href="./images/sprite.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
+              >
+            </li>
+            <li class="contact__item">
+              <a
+                href="tel:+380961111111"
+                class="contact__link link section-link"
+              >
+                <svg class="contact__icon" width="10" height="16">
+                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
         <button type="button" class="mobile-menu-btn" data-menu-open>
           <svg class="mobile-menu-btn__icon" width="40" height="40">
             <use href="./images/sprite.svg#icon-mobile-menu"></use>
@@ -180,16 +185,16 @@
     </header>
     <main>
       <!-- Герой -->
-      <!-- <section class="hero hero__style">
+      <section class="hero hero__style">
         <div class="container hero__container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__btn btn" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- Переваги -->
-      <!-- <section class="advantages section">
+      <section class="advantages section">
         <div class="container">
           <h2 hidden>Переваги</h2>
           <ul class="advantages__list list">
@@ -242,9 +247,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Чим ми займаємося -->
-      <!-- <section class="projects section">
+      <section class="projects section">
         <div class="container">
           <h2 class="projects__title section-title">Чим ми займаємося</h2>
           <ul class="pic-list list">
@@ -292,9 +297,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Наша команда -->
-      <!-- <section class="command section">
+      <section class="command section">
         <div class="container">
           <h2 class="command__title section-title">Наша команда</h2>
           <ul class="employees-list list">
@@ -712,9 +717,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Постійні кліенти -->
-      <!-- <section class="regular-customers section">
+      <section class="regular-customers section">
         <div class="container">
           <h2 class="regular-customers__title section-title">
             Постійні клієнти
@@ -776,14 +781,14 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- Підвал сайту -->
-    <!-- <footer class="basement">
+    <footer class="basement">
       <div class="container">
-        <div class="basement__wrap"> -->
-    <!-- Логотип та контакти -->
-    <!-- <div class="address">
+        <div class="basement__wrap">
+          <!-- Логотип та контакти -->
+          <div class="address">
             <a href="./index.html" class="address__logo link section-logo">
               <span class="address__style section-logo">Web</span>Studio</a
             >
@@ -814,9 +819,9 @@
                 </li>
               </ul>
             </address>
-          </div> -->
-    <!-- Соціальні мережі -->
-    <!-- <div class="social-networks basement__social-networks">
+          </div>
+          <!-- Соціальні мережі -->
+          <div class="social-networks basement__social-networks">
             <p class="social-networks__title">приєднуйтесь</p>
             <ul class="social-icons list">
               <li class="social-icons__item">
@@ -876,9 +881,9 @@
                 ></a>
               </li>
             </ul>
-          </div> -->
-    <!-- Підпишіться на розсилку -->
-    <!-- <div class="mailing basement__mailing">
+          </div>
+          <!-- Підпишіться на розсилку -->
+          <div class="mailing basement__mailing">
             <p class="mailing__title">Підпишіться на розсилку</p>
             <form class="basement-form">
               <input
@@ -900,7 +905,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     -->
     <!-- Модальне вікно -->
     <!-- <div class="backdrop is-hidden" data-modal>
