--- a/index.html
+++ b/index.html
@@ -908,19 +908,19 @@
     </footer>
     -->
     <!-- Модальне вікно -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
           <svg class="modal__close-icon" width="18" height="18">
             <use href="./images/sprite.svg#icon-close-modal"></use>
           </svg>
-        </button> -->
-    <!-- Заголовок модалки -->
-    <!-- <p class="modal__title">Залиште свої дані, ми вам передзвонимо</p> -->
-    <!-- Форма клієнта -->
-    <!-- <form class="modal__form"> -->
-    <!-- Імʼя -->
-    <!-- <div class="modal__field">
+        </button>
+        <!-- Заголовок модалки -->
+        <p class="modal__title">Залиште свої дані, ми вам передзвонимо</p>
+        <!-- Форма клієнта -->
+        <form class="modal__form">
+          <!-- Імʼя -->
+          <div class="modal__field">
             <label for="user-name" class="modal__input-label">Ім'я</label>
             <div class="modal__input-wrap">
               <input
@@ -933,9 +933,9 @@
                 <use href="./images/sprite.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
-          </div> -->
-    <!-- Телефон -->
-    <!-- <div class="modal__field">
+          </div>
+          <!-- Телефон -->
+          <div class="modal__field">
             <label for="user-tel" class="modal__input-label">Телефон</label>
             <div class="modal__input-wrap">
               <input
@@ -948,9 +948,9 @@
                 <use href="./images/sprite.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
-          </div> -->
-    <!-- Пошта -->
-    <!-- <div class="modal__field">
+          </div>
+          <!-- Пошта -->
+          <div class="modal__field">
             <label for="user-mail" class="modal__input-label">Пошта</label>
             <div class="modal__input-wrap">
               <input
@@ -963,9 +963,9 @@
                 <use href="./images/sprite.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
-          </div> -->
-    <!-- Коментар -->
-    <!-- <div class="modal__field-textarea">
+          </div>
+          <!-- Коментар -->
+          <div class="modal__field-textarea">
             <label for="user-comment" class="modal__input-label"
               >Коментар</label
             >
@@ -975,9 +975,9 @@
               class="modal__textarea-comment"
               placeholder="Введіть текст"
             ></textarea>
-          </div> -->
-    <!-- Розсилка та умови договору -->
-    <!-- <div class="modal__field-privacy">
+          </div>
+          <!-- Розсилка та умови договору -->
+          <div class="modal__field-privacy">
             <input
               type="checkbox"
               name="privacy"
@@ -995,12 +995,12 @@
                 <a class="modal__privacy-terms" href="#">Умови договору</a>
               </span></label
             >
-          </div> -->
-    <!-- Кнопка відправити -->
-    <!-- <button type="submit" class="modal__btn btn">Відправити</button>
+          </div>
+          <!-- Кнопка відправити -->
+          <button type="submit" class="modal__btn btn">Відправити</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <!-- JS -->
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
