--- a/index.html
+++ b/index.html
@@ -1003,6 +1003,6 @@
     </div>
     <!-- JS -->
     <script src="./js/modal.js"></script>
-    <script src="./js/menu.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
