--- a/portfolio.html
+++ b/portfolio.html
@@ -53,27 +53,133 @@
             </li>
           </ul>
         </nav>
-        <ul class="contact header__contact list">
-          <li class="contact__item">
-            <a
-              href="malito:info@devstudio.com"
-              class="contact__link link section-link"
-            >
-              <svg class="contact__icon" width="16" height="12">
-                <use href="./images/sprite.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="contact__item">
-            <a href="tel:+380961111111" class="contact__link link section-link">
-              <svg class="contact__icon" width="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <div class="header-contacts-wrap">
+          <ul class="contact header__contact list">
+            <li class="contact__item">
+              <a
+                href="malito:info@devstudio.com"
+                class="contact__link link section-link"
+              >
+                <svg class="contact__icon" width="16" height="12">
+                  <use href="./images/sprite.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
+              >
+            </li>
+            <li class="contact__item">
+              <a
+                href="tel:+380961111111"
+                class="contact__link link section-link"
+              >
+                <svg class="contact__icon" width="10" height="16">
+                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
+        <button type="button" class="mobile-menu-btn" data-menu-open>
+          <svg class="mobile-menu-btn__icon" width="40" height="40">
+            <use href="./images/sprite.svg#icon-mobile-menu"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mobile-menu is-hidden" data-menu>
+        <div class="mobile-menu__container">
+          <div class="mobile-menu-top">
+            <ul class="mobile-menu-nav list">
+              <li class="mobile-menu-nav__item">
+                <a
+                  href="./index.html"
+                  class="mobile-menu-nav__link link section-link"
+                  >Студія</a
+                >
+              </li>
+              <li class="mobile-menu-nav__item">
+                <a
+                  href="./portfolio.html"
+                  class="mobile-menu-nav__link mobile-menu-nav__link--active link section-link"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="mobile-menu-nav__item">
+                <a href="#" class="mobile-menu-nav__link link section-link"
+                  >Контакти</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="mobile-menu-bottom">
+            <ul class="mobile-contact list">
+              <li class="mobile-contact__item">
+                <a
+                  href="tel:+380961111111"
+                  class="mobile-contact__tel link section-link"
+                >
+                  <svg class="mobile-contact__icon" width="10" height="16">
+                    <use href="./images/sprite.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+              <li class="mobile-contact__item">
+                <a
+                  href="malito:info@devstudio.com"
+                  class="mobile-contact__mail link section-link"
+                >
+                  <svg class="mobile-contact__icon" width="16" height="12">
+                    <use href="./images/sprite.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mobile-social list">
+              <li class="mobile-social__item">
+                <a
+                  href=""
+                  class="mobile-social__link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Instagram
+                </a>
+              </li>
+              <li class="mobile-social__item">
+                <a
+                  href=""
+                  class="mobile-social__link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Twitter
+                </a>
+              </li>
+              <li class="mobile-social__item">
+                <a
+                  href=""
+                  class="mobile-social__link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Facebook
+                </a>
+              </li>
+              <li class="mobile-social__item">
+                <a
+                  href=""
+                  class="mobile-social__link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >LinkedIn
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <button type="button" class="mobile-close" data-menu-close>
+          <svg class="mobile-close__icon" width="40" height="40">
+            <use href="./images/sprite.svg#icon-mobile-menu-close"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!-- Проекти компанії -->
@@ -440,5 +546,7 @@
         </div>
       </div>
     </footer>
+    <!-- JS -->
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
