--- a/index.html
+++ b/index.html
@@ -1004,6 +1004,6 @@
     <!-- JS -->
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
-    <script src="./js/header-fixed.js"></script>
+    <!-- <script src="./js/header-fixed.js"></script> -->
   </body>
 </html>
