--- a/portfolio.html
+++ b/portfolio.html
@@ -755,5 +755,6 @@
     </footer>
     <!-- JS -->
     <script src="./js/mobile-menu.js"></script>
+    <!-- <script src="./js/header-fixed.js"></script> -->
   </body>
 </html>
