--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
               >
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link link section-link">Контакти</a>
+              <a href="#footer" class="menu__link link section-link"
+                >Контакти</a
+              >
             </li>
           </ul>
         </nav>
@@ -784,7 +786,7 @@
       </section>
     </main>
     <!-- Підвал сайту -->
-    <footer class="basement">
+    <footer class="basement" id="footer">
       <div class="container">
         <div class="basement__wrap">
           <!-- Логотип та контакти -->
