--- a/portfolio.html
+++ b/portfolio.html
@@ -757,6 +757,6 @@
     </footer>
     <!-- JS -->
     <script src="./js/mobile-menu.js"></script>
-    <!-- <script src="./js/header-fixed.js"></script> -->
+    <script src="./js/header-fixed.js"></script>
   </body>
 </html>
